sass/_settings.scss
// grid properties
$row-width: 1050px;
$column-gutter: 40px;
$total-columns: 12;

// image display properties
$boxed_images: true; /* true if you want your images to have polaroid effects, false if not */

// colors
$body-bg: #fff !default; /* white by default */
$primary-color: #43ac6a !default; /* #008CBA blue by default */
$secondary-color: #e7e7e7 !default; /* light gray by default */
$topbar-bg: #363636; /* #111 almost black by default */
$bottom-border-color: #cccccc;

// font colors
$body-font-color: #222 !default; /* almost black by default */
$header-font-color: #af4976; /* magenta by default */
$subheader-font-color: scale-color($body-font-color, $lightness: 35%); /* medium gray by default */ 
$icon-color: #777777; /* medium-light gray by default */

// body font properties
$body-font-family: 'Roboto', sans-serif !default;
$body-font-size: 18px !default;
$body-font-weight: 300 !default;
$body-font-style: normal !default;
$body-line-height: 1.45 !default;
$body-paragraph-margin: 25px !default;
$bold-font-weight: 500 !default;
$button-font-tny: 14px;

// header font properties
$small-font-size: 50%;
$header-font-family: 'Ubuntu', sans-serif;
$header-font-weight: 500;

// link properties
$anchor-text-decoration: none;
$anchor-font-color: $primary-color;
$anchor-font-color-hover: scale-color($primary-color, $lightness: -25%);

// navigation bar
$topbar-height: 100px;
$topbar-link-font-size: 14px;
$topbar-link-letterspacing: 0.5px;
$topbar-link-hover-lightness: -10%;
$topbar-link-bg-hover: #333;
$topbar-link-color: #fff;
//$topbar-link-color-hover: ($primary-color);


// border radii
$global-radius: 3px !default;
$global-rounded: 1000px !default;


// ==== ==== CUSTOM ==== ==== //

// -- topbar / navigation

// Sets alternate color for drop-down menu "headers" (label that's not a link) The Valle of Ten Crescents, for example.
.top-bar-section li .ddheader {
  color: $secondary-color; 
  font-size: 0.825rem;
  text-transform: uppercase;
  line-height: 1;
  white-space: nowrap;
  padding: 12px 10px;
  background-color: scale-color($topbar-bg, $lightness: -25%);
}

// Sets height of navbar dropdowns so they're not fucking huge
.top-bar-section ul li .ddtitle>a {
 height: 50px;
 line-height: 50px !important;
}

// Sets background color of navbar dropdowns
.top-bar-section .dropdown li a {
  background: #333333 !important;
}

// Sets hover color ov navbar dropdowns
.top-bar-section .dropdown li a:hover {
  background: ($anchor-font-color-hover) !important;
}


// -- MAILCHIMP SIGN UP FORM

// Sets the color of the Mailchimp widget
#mc_embed_signup {
  background: #f3f3f3 !important;
  clear: left;
}

// Styles the button
#mc_embed_signup .button {
  background-color: $primary-color !important;
  font-size: 75% !important;
}

// Makes the email input full width
#mc_embed_signup input.email {
  width: 100% !important;
}

// Yep
#mce-EMAIL {
  margin-top: 15px;
}

// Styles the "first name" input field
#mce-FNAME {
  float: left;
  width: 55%;
  margin-bottom: 0px;
}

// Keeps the text centered in the subscribe button
#mc-embedded-subscribe.button{
  float: right;
  width: 40%;
}

